Related to issue 20207: [PNE] icons are now well aligned after change to HTML5

--- a/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.application/ob-process-styles.css
+++ b/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.application/ob-process-styles.css
@@ -4,7 +4,7 @@
  * Version  1.1  (the  "License"),  being   the  Mozilla   Public  License
  * Version 1.1  with a permitted attribution clause; you may not  use this
  * file except in compliance with the License. You  may  obtain  a copy of
- * the License at http://www.openbravo.com/legal/license.html
+ * the License at http://www.openbravo.com/legal/license.html 
  * Software distributed under the License  is  distributed  on  an "AS IS"
  * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  * License for the specific  language  governing  rights  and  limitations
@@ -17,15 +17,11 @@
  ************************************************************************
  */
 
-OB.Styles.Process = {};
+.OBProcessIconPinImg {
+  padding: 3px 0px 0px 0px;
+}
 
-OB.Styles.Process.PickAndExecute = {
-  pinColumnWidth: 26,
-  gridCellHeight: 25,
-  iconPinSrc: OB.Styles.skinsPath + 'Default/org.openbravo.client.application/images/process/iconPin.png',
-  iconPinStyle: 'OBProcessIconPinImg',
-  iconDeleteSrc: OB.Styles.skinsPath + 'Default/org.openbravo.client.application/images/process/iconDelete.png',
-  iconDeleteStyle: 'OBProcessIconDeleteImg',
-  addNewButtonAlign: 'left',
-  buttonLayoutHeight: 80
-};
+.OBProcessIconDeleteImg {
+  cursor: pointer;
+  padding: 3px 0px 0px 0px;
+}
